Adjusted spacing; fixed max update bug (useEffect)

--- a/src/components/Footer/Footer.module.scss
+++ b/src/components/Footer/Footer.module.scss
@@ -3,7 +3,7 @@
 .footer {
   text-align: center;
   font-size: 0.9em;
-  padding: 0.5rem 0;
+  padding: 1rem 0;
 }
 
 .absolute {
